--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   </head>
   <body>
     <h1>Hello AMP World!</h1>
+    <amp-img src="https://www.ampproject.org/examples/images/amp.jpg"
+  width="900" height="508" layout="responsive"></amp-img>
   </body>
 </html>
