--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html ⚡>
   <head>
     <meta charset="utf-8">
+   
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+        <!-- 이 스크립트는 amp-youtube 요소를 사용하기 위해 반드시 <head> 섹션 내에 포함해야합니다. -->
+    <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+    
     <title>Hello AMP world</title>
     <link rel="canonical" href="hello-world.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
    
-    <!-- 이 스크립트는 amp-youtube 요소를 사용하기 위해 반드시 <head> 섹션 내에 포함해야합니다. -->
-    <script async custom-element="amp-youtube"
-      src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+
     
   </head>
   <body>
