--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       News Site
     </header>
     <article>
-      <h1>Article Name</h1>
+      <h1>Luke2Jen</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam egestas tortor sapien, non tristique ligula accumsan eu.</p>
+      <p>This is my first step with serverless website.</p>
 
       <amp-img src="mountains.jpg" layout="responsive" width="266" height="150"></amp-img>
     </article>
