--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   </head>
   <body>
     <header>
-      News Site
+      Luke2Jen
     </header>
     <article>
-      <h1>Luke2Jen</h1>
+      <h1>The very first journey</h1>
 
       <p>This is my first step with serverless website.</p>
 
