--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <amp-facebook width="486" height="657"
     layout="responsive"
-    data-href="https://www.facebook.com/zuck/posts/10102593740125791">
+    data-href="https://www.facebook.com/inyong.ham">
 </amp-facebook>
     
     <amp-ad width=300 height=250
